# IUH_Project_Zalo_BE

./: .gitignore  BondHub_Auth_API.postman_collection.json  MONGODB_AUDITING.md  PR.md  PR_BH-XXX_backend.md  be_status.txt  docker-compose.yml  et --hard b06153cwq  pom.xml  pr_video_call_v2.md  pull_request_description.md  run-social-feed-stack.ps1
post-recommendation-service/: .gitignore  Dockerfile  Jenkinsfile  Makefile  POST_RECOMMENDATION_SERVICE_DEEP_DIVE.md  README.md  main.py  pyproject.toml  run.py
post-recommendation-service/app/: __init__.py  main.py
post-recommendation-service/app/api/: router.py
post-recommendation-service/app/clients/: friend_service_client.py  mongodb_client.py  qdrant_client.py  social_feed_client.py  user_service_client.py
post-recommendation-service/app/common/: __init__.py  api_response.py
post-recommendation-service/app/core/: config.py  constants.py  exception_handlers.py  logging.py
post-recommendation-service/app/repositories/: recommendation_repository.py
post-recommendation-service/app/schemas/: __init__.py  recommendation.py
post-recommendation-service/app/security/: principal.py  security_config.py  security_context.py  security_context_filter.py
post-recommendation-service/app/services/: dynamic_vector_service.py  feed_candidate_service.py  post_vectorizer.py  recommender_engine.py  rrf_recommendation_engine.py  (+1 more)
post-recommendation-service/configs/: dev.yaml  prod.yaml  test.yaml
post-recommendation-service/docker/: Dockerfile  docker-compose.yml
post-recommendation-service/k8s/: deployment.yaml
(+1294 files in other folders)
